; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_os.c_sqlite3OsSectorSize.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_os.c_sqlite3OsSectorSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { {}* }

@SQLITE_DEFAULT_SECTOR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3OsSectorSize(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32 (%struct.TYPE_6__*)*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = bitcast {}** %7 to i32 (%struct.TYPE_6__*)**
  %9 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %8, align 8
  store i32 (%struct.TYPE_6__*)* %9, i32 (%struct.TYPE_6__*)** %3, align 8
  %10 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %3, align 8
  %11 = icmp ne i32 (%struct.TYPE_6__*)* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i32 (%struct.TYPE_6__*)*, i32 (%struct.TYPE_6__*)** %3, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %15 = call i32 %13(%struct.TYPE_6__* %14)
  br label %18

16:                                               ; preds = %1
  %17 = load i32, i32* @SQLITE_DEFAULT_SECTOR_SIZE, align 4
  br label %18

18:                                               ; preds = %16, %12
  %19 = phi i32 [ %15, %12 ], [ %17, %16 ]
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
